<resources>
    <!-- common -->
    <string name="app_name">Shop</string>
    <string name="have_account">Already have an account?</string>
    <string name="with_google">Sign in with Google</string>
    <string name="with_apple">Sign in with Apple</string>
    <string name="welcome_back">Welcome back</string>
    <string name="change_photo">Change photo</string>
    <string name="main">Main</string>

    <!-- user -->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="full_name">Satria Adhi Pradana</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- action -->
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="ok">OK</string>
    <string name="upload_item">Upload item</string>

    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    
    <!-- error -->
    <string name="connection_error">Please, check your network connection</string>
    <string name="profile">Profile</string>
    
    
    
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="brands">Brands</string>
    <string name="search">What are you looking for?</string>
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="products">Products</string>
    <string name="favorites">Favorites</string>
    <string name="basket">Basket</string>
    <string name="chat">Chat</string>
</resources>