<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/fProfile">

    <fragment
        android:id="@+id/fProducts"
        android:name="rustam.urazov.shop.screens.products.ProductsFragment"
        android:label="@string/products" />

    <fragment
        android:id="@+id/fFavorites"
        android:name="rustam.urazov.shop.screens.favorites.FavoritesFragment"
        android:label="@string/favorites" />

    <fragment
        android:id="@+id/fBasket"
        android:name="rustam.urazov.shop.screens.basket.BasketFragment"
        android:label="@string/basket" />

    <fragment
        android:id="@+id/fChat"
        android:name="rustam.urazov.shop.screens.chat.ChatFragment"
        android:label="@string/chat" />

    <fragment
        android:id="@+id/fProfile"
        android:name="rustam.urazov.shop.screens.profile.ProfileFragment"
        android:label="@string/profile" />

</navigation>